se corrigieron los errores de imagenes

--- a/src/componentes/styles/footer.css
+++ b/src/componentes/styles/footer.css
@@ -190,7 +190,7 @@
   margin-top: -0.3%;
   border-top: .7vh solid white;
   padding: 1%;
-  background-image: url("http://tecmm.edu.mx/imagesReact/images/linksFooter/fondoFooterGob.webp");
+  background-image: url("http://tecmm.edu.mx/imagesReact/images/linksFooter/fondoFooterGob.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
